<resources>
    <string name="app_name">Project3_C323</string>
    <string name="difficulty">Select Difficulty:</string>
    <string name="operation">Select Operation:</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="addition">Addition</string>
    <string name="subtract">Subtraction</string>
    <string name="multiplication">Multiplication</string>
    <string name="division">Division</string>
    <string name="questions">Number of questions</string>
    <string name="qNumber">0</string>
    <string name="start">Start</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>